tests/runnable/multiple-returns.co

function test (x, y)
	return x + y, y

function .c .cdecl main

	var a, b, c, d = test (1, 2), test (10, 20)
	if a <> 3
		return 1
	end
	if b <> 2
		return 2
	end
	if c <> 30
		return 3
	end
	if d <> 20
		return 4
	end
	return 0
